[gd_scene load_steps=6 format=2]

[ext_resource path="res://addons/NormalMap/Normal Map Generator.gd" type="Script" id=1]
[ext_resource path="res://addons/NormalMap/normalmap.shader" type="Shader" id=2]
[ext_resource path="res://addons/NormalMap/sample.png" type="Texture" id=3]
[ext_resource path="res://addons/NormalMap/Light.png" type="Texture" id=4]

[sub_resource type="ShaderMaterial" id=1]
shader = ExtResource( 2 )
shader_param/normal_preview = false
shader_param/emboss_height = 0.5
shader_param/bump_height = 0.9
shader_param/blur = 1.0
shader_param/bump = 12.0
shader_param/invertX = true
shader_param/invertY = true
shader_param/with_distance = true
shader_param/with_emboss = true

[node name="Normal Map Generator" type="Control"]
anchor_right = 1.0
anchor_bottom = 1.0
script = ExtResource( 1 )

[node name="FileDialog" type="FileDialog" parent="."]
margin_top = 4.0
margin_right = 274.0
margin_bottom = 204.0
window_title = "Abrir un archivo"
resizable = true
mode = 0

[node name="VBoxContainer" type="VBoxContainer" parent="."]

[node name="ViewportContainer" type="ViewportContainer" parent="VBoxContainer"]
margin_right = 138.0
size_flags_horizontal = 15
size_flags_vertical = 15

[node name="Viewport" type="Viewport" parent="VBoxContainer/ViewportContainer"]
own_world = true
transparent_bg = true
hdr = false
disable_3d = true
usage = 0

[node name="TextureRect" type="TextureRect" parent="VBoxContainer/ViewportContainer/Viewport"]
light_mask = 2
material = SubResource( 1 )
texture = ExtResource( 3 )
stretch_mode = 6

[node name="Light2D" type="Light2D" parent="VBoxContainer/ViewportContainer/Viewport/TextureRect"]
position = Vector2( 127.877, 11.4031 )
texture = ExtResource( 4 )
color = Color( 1, 0.984314, 0, 1 )
energy = 2.06
range_height = 15.0
range_item_cull_mask = 2

[node name="TextureButton" type="Button" parent="VBoxContainer"]
margin_top = 4.0
margin_right = 138.0
margin_bottom = 24.0
text = "Texture..."

[node name="Normal" type="CheckBox" parent="VBoxContainer"]
margin_top = 28.0
margin_right = 138.0
margin_bottom = 52.0
text = "Normal Preview"

[node name="Emboss" type="CheckBox" parent="VBoxContainer"]
margin_top = 56.0
margin_right = 138.0
margin_bottom = 80.0
pressed = true
text = "Emboss:"

[node name="Emboss Height" type="HSlider" parent="VBoxContainer"]
margin_top = 84.0
margin_right = 138.0
margin_bottom = 100.0
max_value = 2.0
step = 0.1
value = 0.1

[node name="Bump" type="CheckBox" parent="VBoxContainer"]
margin_top = 104.0
margin_right = 138.0
margin_bottom = 128.0
pressed = true
text = "Bump:"

[node name="Bump Height" type="HSlider" parent="VBoxContainer"]
margin_top = 132.0
margin_right = 138.0
margin_bottom = 148.0
max_value = 2.0
step = 0.1
value = 0.1

[node name="HBoxContainer" type="HBoxContainer" parent="VBoxContainer"]
margin_top = 152.0
margin_right = 138.0
margin_bottom = 176.0

[node name="Label" type="Label" parent="VBoxContainer/HBoxContainer"]
margin_top = 5.0
margin_right = 30.0
margin_bottom = 19.0
text = "Blur:"

[node name="SpinBoxBlur" type="SpinBox" parent="VBoxContainer/HBoxContainer"]
margin_left = 34.0
margin_right = 108.0
margin_bottom = 24.0
max_value = 10.0
value = 1.0
rounded = true
suffix = "px"

[node name="HBoxContainer2" type="HBoxContainer" parent="VBoxContainer"]
margin_top = 180.0
margin_right = 138.0
margin_bottom = 204.0

[node name="Label" type="Label" parent="VBoxContainer/HBoxContainer2"]
margin_top = 5.0
margin_right = 60.0
margin_bottom = 19.0
text = "Distance:"

[node name="SpinBoxDistance" type="SpinBox" parent="VBoxContainer/HBoxContainer2"]
margin_left = 64.0
margin_right = 138.0
margin_bottom = 24.0
value = 10.0
rounded = true
suffix = "px"

[node name="InvertX" type="CheckBox" parent="VBoxContainer"]
margin_top = 208.0
margin_right = 138.0
margin_bottom = 232.0
pressed = true
text = "Invert X"

[node name="InvertY" type="CheckBox" parent="VBoxContainer"]
margin_top = 236.0
margin_right = 138.0
margin_bottom = 260.0
pressed = true
text = "Invert Y"

[node name="Button" type="Button" parent="VBoxContainer"]
margin_top = 264.0
margin_right = 138.0
margin_bottom = 284.0
text = "Generate"
[connection signal="file_selected" from="FileDialog" to="." method="_on_FileDialog_file_selected"]
[connection signal="pressed" from="VBoxContainer/TextureButton" to="." method="_on_TextureButton_pressed"]
[connection signal="toggled" from="VBoxContainer/Normal" to="." method="_on_Normal_toggled"]
[connection signal="toggled" from="VBoxContainer/Emboss" to="." method="_on_Emboss_toggled"]
[connection signal="value_changed" from="VBoxContainer/Emboss Height" to="." method="_on_Emboss_Height_value_changed"]
[connection signal="toggled" from="VBoxContainer/Bump" to="." method="_on_Bump_toggled"]
[connection signal="value_changed" from="VBoxContainer/Bump Height" to="." method="_on_Bump_Height_value_changed"]
[connection signal="value_changed" from="VBoxContainer/HBoxContainer/SpinBoxBlur" to="." method="_on_SpinBoxBlur_value_changed"]
[connection signal="value_changed" from="VBoxContainer/HBoxContainer2/SpinBoxDistance" to="." method="_on_SpinBoxDistance_value_changed"]
[connection signal="toggled" from="VBoxContainer/InvertX" to="." method="_on_InvertX_toggled"]
[connection signal="toggled" from="VBoxContainer/InvertY" to="." method="_on_InvertY_toggled"]
[connection signal="pressed" from="VBoxContainer/Button" to="." method="_on_Button_pressed"]
